# deep-student

./: .env.example  .gitattributes  .gitignore  .vsconfig  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COGNI-GRAPH-README.md  COGNI-GRAPH-SETUP.md  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  cargo-config.toml  check_deepseek_config.py  clean_api_keys.py  cogni-graph-config.example.toml  compile-check.sh  compile.ps1  config.json  eslint.config.js  fix.py  fix_database_schema.py  format_ascii.cjs  format_ascii.js  index.html  init-ramdisk.bat  package-lock.json  package.json  patch_notes_manager.rs  playwright-ct.config.ts  postcss.config.js  release-please-config.json  run-dev.cmd  run-dev.ps1  start_services.py  syntax_fix.py  tailwind.config.js  temp_app_before_cleanup.tsx  (+7 more)
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  create_tables.sql  fix_choice_card_preview.sql  import_all_templates_final.sql  sweep.timestamp  tauri  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test_template_insert.rs  test_vector_search.rs  test_workflow_logger.rs  update_choice_card_front_interactive.sql  update_preview_data.sql
src-tauri/.cargo/: config.toml
src-tauri/benches/: tool_performance.rs
src-tauri/capabilities/: default.json  mobile.json  test.json
src-tauri/icons/: icon.icns
src-tauri/icons_ios_current/: icon.icns
src-tauri/migrations/: README.md
src-tauri/src/: analysis_service.rs  anki_connect_service.rs  anr_watchdog.rs  apkg_exporter_service.rs  backup.rs  backup_common.rs  backup_config.rs  backup_job_manager.rs  batch_operations.rs  commands.rs  config_recovery.rs  crash_logger.rs  cross_page_merger.rs  crypto.rs  data_space.rs  database.debug.rs  database.rs  database_indexes.sql  database_optimizations.rs  debug_logger.rs  deepseek_ocr_parser.rs  document_parser.rs  enhanced_anki_service.rs  (+45 more)
(+2076 files in other folders)
